Commit al master del blogpost en su version mas resiente

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,12 +8,17 @@
     <link rel="stylesheet" href="css/estilos.css" />
   </head>
   <body>
-    <h1>aqui vamos a hacer un blog post</h1>
-    <p>Ye ste es el parrafo de inicio</p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla et in,
-      commodi natus atque dicta quam illum minima nobis quae repudiandae facilis
-      ipsa iure enim inventore repellendus. Consequuntur, laudantium unde?
-    </p>
+    <div id="container">
+      <div id="post">
+        <h1>Este es el titulo atractivo del post</h1>
+        <p>Ye ste es el parrafo de inicio</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla et in,
+          commodi natus atque dicta quam illum minima nobis quae repudiandae
+          facilis ipsa iure enim inventore repellendus. Consequuntur, laudantium
+          unde?
+        </p>
+      </div>
+    </div>
   </body>
 </html>
