--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="container">
+      <div id="cabecera">Cabecera</div>
       <div id="post">
         <h1>Este es el titulo atractivo del post</h1>
         <p>Ye ste es el parrafo de inicio</p>
