Agragamos nuevo contenido relevante y propio al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,13 @@
           facilis ipsa iure enim inventore repellendus. Consequuntur, laudantium
           unde?
         </p>
+        <p>
+          Los blog son una buena forma de crear y divulgar tu contenido es una
+          manera muy buena y fundamental para qua se te hago notal y un mas si
+          tienes alli igual un buen portafolio. tambien ceo que apra para una
+          banda de rock es fundamental pese a que no muchas lo tiene o es en si
+          necesario.
+        </p>
       </div>
     </div>
   </body>
