--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>el titulo del Post</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Island+Moments&family=Sevillana&display=swap");
+    </style>
     <link rel="stylesheet" href="css/estilos.css" />
   </head>
   <body>
