Agregue suscripcion,cambien la cabecera maestra y puse todo en azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
   <body>
     <div id="container">
       <div id="cabecera">
-        Cabecera Mejorada <span id="tagline">Tu blog de confianza</span>
+        Cabecera Mejorada <span id="tagline">Tu blog maestro</span>
       </div>
       <div id="post">
         <h1>Este es el titulo atractivo del post</h1>
@@ -31,6 +31,7 @@
           banda de rock es fundamental pese a que no muchas lo tiene o es en si
           necesario.
         </p>
+        <p>Suscribite y dale Like!</p>
       </div>
     </div>
   </body>
