--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,7 @@
   <body>
     <div id="container">
       <div id="cabecera">
+        <img id="logo" src="imagenes/nave.jpg" alt="" />
         Cabecera Mejorada <span id="tagline">Tu blog de cabecera</span> Cabecera
         Mejorada <span id="tagline">Tu blog maestro</span>
       </div>
