--- a/blogpost.html
+++ b/blogpost.html
@@ -19,12 +19,10 @@
       </div>
       <div id="post">
         <h1>Este es el titulo atractivo del post</h1>
-        <p>Ye ste es el parrafo de inicio</p>
+        <p>Y este es el párrafo de inicio</p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla et in,
-          commodi natus atque dicta quam illum minima nobis quae repudiandae
-          facilis ipsa iure enim inventore repellendus. Consequuntur, laudantium
-          unde?
+          Voy a poner algo mas interesante aqui , solo por cambiar algo probar
+          funsiones de GIt y de paso para ver comoe sta saliendo todo.
         </p>
         <p>
           Los blog son una buena forma de crear y divulgar tu contenido es una
