--- a/blogpost.html
+++ b/blogpost.html
@@ -18,7 +18,7 @@
         Mejorada <span id="tagline">Tu blog maestro</span>
       </div>
       <div id="post">
-        <h1>Este es el titulo atractivo del post</h1>
+        <h1>Aqu&iacute; inicia la historia de un proyectazo</h1>
         <p>Y este es el párrafo de inicio</p>
         <p>
           Voy a poner algo mas interesante aqui , solo por cambiar algo probar
