--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,7 @@
       <div id="post">
         <h1>Este es el titulo atractivo del post</h1>
         <p>Ye ste es el parrafo de inicio</p>
+        <p><img src="imagenes/nave.jpg" width="100%" /></p>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla et in,
           commodi natus atque dicta quam illum minima nobis quae repudiandae
