--- a/blogpost.html
+++ b/blogpost.html
@@ -18,14 +18,12 @@
         Mejorada <span id="tagline">Tu blog maestro</span>
       </div>
       <div id="post">
-        <h1>Este es el titulo atractivo del post</h1>
+        <h1>Este es el titulo del art&iacuteculo de mi blog;</h1>
         <p>Ye ste es el parrafo de inicio</p>
-        <p><img src="imagenes/nave.jpg" width="100%" /></p>
+        <p><img src="imagenes/galaxia.jpg" width="100%" /></p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla et in,
-          commodi natus atque dicta quam illum minima nobis quae repudiandae
-          facilis ipsa iure enim inventore repellendus. Consequuntur, laudantium
-          unde?
+          Voy a poner algo mas interesante aqui , solo por cambiar algo probar
+          funsiones de GIt y de paso para ver comoe sta saliendo todo.
         </p>
         <p>
           Los blog son una buena forma de crear y divulgar tu contenido es una
