Agrague una iamgen desde imgur un repositorio externo al mio

--- a/blogpost.html
+++ b/blogpost.html
@@ -20,7 +20,9 @@
       <div id="post">
         <h1>Este es el titulo del art&iacuteculo de mi blog;</h1>
         <p>Ye ste es el parrafo de inicio</p>
-        <p><img src="imagenes/galaxia.jpg" width="100%" /></p>
+        <p>
+          <img src="https://i.imgur.com/5npZuBr.jpg" width="100%" />
+        </p>
         <p>
           Voy a poner algo mas interesante aqui , solo por cambiar algo probar
           funsiones de GIt y de paso para ver comoe sta saliendo todo.
